Fix cards "learn more" button size and spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1277,7 +1277,6 @@ main div.section.wave.wavecarousel.bluegreen {
 
 /* Green secondary buttons */
 main div.green-secondary-buttons .button {
-  min-width: 200px;
   border-color: #6eb43f;
 }
 
